src/test/ui/wf/wf-struct-field.stderr
error[E0277]: the trait bound `A: std::marker::Copy` is not satisfied
  --> $DIR/wf-struct-field.rs:12:5
   |
LL |     data: IsCopy<A>
   |     ^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `A`
   |
   = help: consider adding a `where A: std::marker::Copy` bound
note: required by `IsCopy`
  --> $DIR/wf-struct-field.rs:7:1
   |
LL | struct IsCopy<T:Copy> {
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
